--- a/pr/6/collections/hachyderm/general/changelog.html
+++ b/pr/6/collections/hachyderm/general/changelog.html
@@ -21,7 +21,7 @@
       <script src="../../../_static/sphinx_highlight.js?v=6ffebe34"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="next" title="hachyderm.general.pgdg_repository role – Configure PGDG repository" href="pgdg_repository_role.html" />
+    <link rel="next" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" href="pgbackrest_role.html" />
     <link rel="prev" title="Hachyderm.General" href="index.html" /><!-- extra head elements for Ansible beyond RTD Sphinx Theme -->
 
 
@@ -160,7 +160,7 @@
 
 <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="index.html" class="btn btn-neutral float-left" title="Hachyderm.General" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="pgdg_repository_role.html" class="btn btn-neutral float-right" title="hachyderm.general.pgdg_repository role – Configure PGDG repository" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="pgbackrest_role.html" class="btn btn-neutral float-right" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
