--- a/pr/6/collections/hachyderm/general/pgbackrest_role.html
+++ b/pr/6/collections/hachyderm/general/pgbackrest_role.html
@@ -367,10 +367,10 @@ To check whether it is installed, run <code class="code docutils literal notrans
 <a class="ansibleOptionLink" href="#parameter-main--pgbackrest_role" title="Permalink to this option"></a><p class="ansible-option-type-line"><span class="ansible-option-type">string</span></p>
 </div></td>
 <td><div class="ansible-option-cell"><p>Role of the pgBackRest instance on the server</p>
-<p>With `standalone` to run everything locally</p>
-<p>With `server` to start a TLS server and orchestrate backup policies</p>
-<p>With `agent` to start a TLS server to receive operations from the server</p>
-<p>With `both` to configure a server and an agent on the same host</p>
+<p><code class="docutils literal notranslate"><span class="pre">standalone</span></code> to run everything locally</p>
+<p><code class="docutils literal notranslate"><span class="pre">server</span></code> to start a TLS server and orchestrate backup policies</p>
+<p><code class="docutils literal notranslate"><span class="pre">agent</span></code> to start a TLS server to receive operations from the server</p>
+<p><code class="docutils literal notranslate"><span class="pre">both</span></code> to configure a server and an agent on the same host</p>
 <p class="ansible-option-line"><strong class="ansible-option-choices">Choices:</strong></p>
 <ul class="simple">
 <li><p><code class="ansible-option-default-bold docutils literal notranslate"><strong><span class="pre">&quot;standalone&quot;</span></strong></code> <span class="ansible-option-choices-default-mark">← (default)</span></p></li>
