--- a/pr/6/collections/hachyderm/general/pgdg_repository_role.html
+++ b/pr/6/collections/hachyderm/general/pgdg_repository_role.html
@@ -23,7 +23,7 @@
     <script src="../../../_static/js/theme.js"></script>
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="hachyderm.general.postgresql role – Install and configure PostgreSQL" href="postgresql_role.html" />
-    <link rel="prev" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" href="pgbackrest_role.html" /><!-- extra head elements for Ansible beyond RTD Sphinx Theme -->
+    <link rel="prev" title="hachyderm.general.pgbackrest_exporter role – Install and configure pgBackRest Exporter" href="pgbackrest_exporter_role.html" /><!-- extra head elements for Ansible beyond RTD Sphinx Theme -->
 
 
 
@@ -177,7 +177,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
           
 
 <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="pgbackrest_role.html" class="btn btn-neutral float-left" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="pgbackrest_exporter_role.html" class="btn btn-neutral float-left" title="hachyderm.general.pgbackrest_exporter role – Install and configure pgBackRest Exporter" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="postgresql_role.html" class="btn btn-neutral float-right" title="hachyderm.general.postgresql role – Install and configure PostgreSQL" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
