deploy: 26680390709bc81880fc6ea2ffe696df2e8c57c2

--- a/pr/6/collections/hachyderm/general/pgbackrest_exporter_role.html
+++ b/pr/6/collections/hachyderm/general/pgbackrest_exporter_role.html
@@ -22,7 +22,7 @@
       <script src="../../../_static/sphinx_highlight.js?v=6ffebe34"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="next" title="hachyderm.general.pgdg_repository role – Configure PGDG repository" href="pgdg_repository_role.html" />
+    <link rel="next" title="hachyderm.general.pgbouncer role – Install and configure PgBouncer" href="pgbouncer_role.html" />
     <link rel="prev" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" href="pgbackrest_role.html" /><!-- extra head elements for Ansible beyond RTD Sphinx Theme -->
 
 
@@ -279,7 +279,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
 
 <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="pgbackrest_role.html" class="btn btn-neutral float-left" title="hachyderm.general.pgbackrest role – Install and configure pgBackRest" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="pgdg_repository_role.html" class="btn btn-neutral float-right" title="hachyderm.general.pgdg_repository role – Configure PGDG repository" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="pgbouncer_role.html" class="btn btn-neutral float-right" title="hachyderm.general.pgbouncer role – Install and configure PgBouncer" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
