deploy: e4eb47ef8ecd62b77c8a5221f20d169ed4f029b1

--- a/pr/6/collections/hachyderm/general/postgresql_role.html
+++ b/pr/6/collections/hachyderm/general/postgresql_role.html
@@ -317,7 +317,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
 <a class="ansibleOptionLink" href="#parameter-main--postgresql_manage_replication" title="Permalink to this option"></a><p class="ansible-option-type-line"><span class="ansible-option-type">boolean</span></p>
 </div></td>
 <td><div class="ansible-option-cell"><p>Configure replication on a replica.</p>
-<p>This operation will **remove the current data directory** to synchronize with a primary.</p>
+<p>This operation will REMOVE THE DATA DIRECTORY to synchronize with a primary.</p>
 <p class="ansible-option-line"><strong class="ansible-option-choices">Choices:</strong></p>
 <ul class="simple">
 <li><p><code class="ansible-option-default-bold docutils literal notranslate"><strong><span class="pre">false</span></strong></code> <span class="ansible-option-choices-default-mark">← (default)</span></p></li>
