deploy: 00710ba4aa32742559b84b9da5a05284c7c050b6

--- a/pr/6/collections/hachyderm/general/pgbackrest_role.html
+++ b/pr/6/collections/hachyderm/general/pgbackrest_role.html
@@ -330,8 +330,10 @@ To check whether it is installed, run <code class="code docutils literal notrans
 </div></td>
 <td><div class="ansible-option-cell"><p>Command to execute when a pgBackRest backup command is performed.</p>
 <p>The command takes two positional arguments.</p>
-<p><code class="docutils literal notranslate"><span class="pre">pgBackRest</span></code>: the string <code class="docutils literal notranslate"><span class="pre">pgBackRest</span></code> to tell who’s runing the command.</p>
-<p><code class="docutils literal notranslate"><span class="pre">message</span></code>: a message to tell what is happening (replaced by <code class="docutils literal notranslate"><span class="pre">pgbackrest_notification_message_start</span></code> and <code class="docutils literal notranslate"><span class="pre">pgbackrest_notification_message_stop</span></code>).</p>
+<ol class="arabic simple">
+<li><p>the <code class="docutils literal notranslate"><span class="pre">pgBackRest</span></code> string to tell who’s runing the command.</p></li>
+<li><p>a <code class="docutils literal notranslate"><span class="pre">message</span></code> to tell what is happening (replaced by <code class="docutils literal notranslate"><span class="pre">pgbackrest_notification_message_start</span></code> and <code class="docutils literal notranslate"><span class="pre">pgbackrest_notification_message_stop</span></code>).</p></li>
+</ol>
 </div></td>
 </tr>
 <tr class="row-odd"><td><div class="ansible-option-cell">
