--- a/pr/6/collections/hachyderm/general/pgbackrest_exporter_role.html
+++ b/pr/6/collections/hachyderm/general/pgbackrest_exporter_role.html
@@ -202,7 +202,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
 <a class="ansibleOptionLink" href="#parameter-main--pgbackrest_exporter_download_url" title="Permalink to this option"></a><p class="ansible-option-type-line"><span class="ansible-option-type">string</span></p>
 </div></td>
 <td><div class="ansible-option-cell"><p>URL used to download the exporter archive</p>
-<p class="ansible-option-line"><strong class="ansible-option-default-bold">Default:</strong> <code class="ansible-option-default docutils literal notranslate"><span class="pre">&quot;https://github.com/woblerr/pgbackrest_exporter/releases/download/v{{</span> <span class="pre">pgbackrest_exporter_version</span> <span class="pre">}}/pgbackrest_exporter-{{</span> <span class="pre">pgbackrest_exporter_version</span> <span class="pre">}}-{{</span> <span class="pre">pgbackrest_exporter_os</span> <span class="pre">}}-{{</span> <span class="pre">pgbackrest_exporter_arch</span> <span class="pre">}}.tar.gz&quot;</span></code></p>
+<p class="ansible-option-line"><strong class="ansible-option-default-bold">Default:</strong> <code class="ansible-option-default docutils literal notranslate"><span class="pre">&quot;https://github.com/woblerr/pgbackrest_exporter/releases/download/v{{</span> <span class="pre">pgbackrest_exporter_version</span> <span class="pre">}}/</span> <span class="pre">pgbackrest_exporter-{{</span> <span class="pre">pgbackrest_exporter_version</span> <span class="pre">}}-{{</span> <span class="pre">pgbackrest_exporter_os</span> <span class="pre">}}-{{</span> <span class="pre">pgbackrest_exporter_arch</span> <span class="pre">}}.tar.gz&quot;</span></code></p>
 </div></td>
 </tr>
 <tr class="row-odd"><td><div class="ansible-option-cell">
