--- a/pr/6/pgdg_repository_role.html
+++ b/pr/6/pgdg_repository_role.html
@@ -7,7 +7,7 @@
 <meta content="2.24.0" name="antsibull-docs" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>hachyderm.general.pgdg_repository role – Configure PGDG repository &mdash; Hachyderm.General Collection  documentation</title>
+  <title>hachyderm.general.pgdg_repository role – Configure PGDG repository &mdash; Hachyderm General Collection  documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=41de9001" />
       <link rel="stylesheet" type="text/css" href="_static/css/ansible.css?v=b54c304f" />
       <link rel="stylesheet" type="text/css" href="_static/antsibull-minimal.css" />
@@ -45,7 +45,7 @@
   <img class="DocSiteNav-logo"
     src="_static/images/Ansible-Mark-RGB_White.png"
     alt="Ansible Logo">
-  <div class="DocSiteNav-title">Hachyderm.General Collection Documentation</div>
+  <div class="DocSiteNav-title">Hachyderm General Collection Documentation</div>
 </a>
   <div class="wy-grid-for-nav">
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
@@ -55,7 +55,7 @@
           
           
           <a href="index.html" class="icon icon-home">
-            Hachyderm.General Collection
+            Hachyderm General Collection
           </a><!--- Based on https://github.com/rtfd/sphinx_rtd_theme/pull/438/files -->
 
 <div class="version">
@@ -99,7 +99,7 @@
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap"><nav class="wy-nav-top" aria-label="Mobile navigation menu" >
           <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-          <a href="index.html">Hachyderm.General Collection</a>
+          <a href="index.html">Hachyderm General Collection</a>
       </nav>
 
       <div class="wy-nav-content">
